--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,11 @@ body._lock {
     padding: 0px 0px;
   }
 }
+@media (max-width: 415px) {
+  .col-footer__body-3 {
+    padding: 30px 0px;
+  }
+}
 
 .right-part__body {
   display: -webkit-box;
