--- a/portfolio/B19/css/style.css
+++ b/portfolio/B19/css/style.css
@@ -1746,7 +1746,7 @@ body {
 
 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
-  left: 10px;
+  left: 54px !important;
   right: auto;
 }
 
@@ -1761,7 +1761,7 @@ body {
 
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
-  right: 10px;
+  right: 54px !important;
   left: auto;
 }
 
@@ -1916,8 +1916,9 @@ body {
 }
 
 .slider-main__title {
-  margin-top: 3.4375rem;
+  padding-top: 3.4375rem;
   margin-bottom: 3.125rem;
+  margin-left: 0.5625rem;
 }
 
 .slider-main__title .yellow-title::after {
@@ -1926,7 +1927,7 @@ body {
 
 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
-  left: 10px;
+  left: 54px !important;
   right: auto;
 }
 
@@ -1941,7 +1942,7 @@ body {
 
 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
-  right: 10px;
+  right: 54px !important;
   left: auto;
 }
 
@@ -2961,7 +2962,7 @@ button.swiper-pagination-bullet {
   }
 
   .newlvl__body {
-    margin-top: -1.875rem;
+    margin-top: 0rem;
   }
 
   .newlvl__frame {
@@ -3030,6 +3031,10 @@ button.swiper-pagination-bullet {
     padding: 0rem 0rem;
   }
 
+  .newlvl__container {
+    background-color: #F2F2F2;
+  }
+
   .newlvl__row {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -3056,6 +3061,19 @@ button.swiper-pagination-bullet {
 
   .item-newlvl__label {
     font-size: 1rem;
+  }
+
+  .slider-main {
+    background-color: #fff;
+  }
+
+  .slider-main__container {
+    padding: 0rem 0rem;
+  }
+
+  .slider-main__title {
+    padding-top: 2.1875rem;
+    margin-bottom: 2.1875rem;
   }
 
   .swiper-button-prev:after,
@@ -3170,6 +3188,11 @@ button.swiper-pagination-bullet {
 
   .row-newlvl__item {
     width: 170px;
+  }
+
+  .slider-main__title {
+    padding-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 }
 
