--- a/portfolio/B19/css/style.css
+++ b/portfolio/B19/css/style.css
@@ -401,12 +401,27 @@ body {
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
+  position: relative;
 }
 
 .menu__home:hover {
   -webkit-transform: translateY(-10%);
       -ms-transform: translateY(-10%);
           transform: translateY(-10%);
+}
+
+.menu__home a.active::after {
+  content: "";
+  position: absolute;
+  bottom: -18px;
+  left: 50%;
+  width: 110%;
+  height: 0.1875rem;
+  background-color: #FFD600;
+  border-radius: 5px;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .menu__arrow {
@@ -1923,6 +1938,13 @@ body {
 
 .slider-main__title .yellow-title::after {
   bottom: 7px;
+}
+
+.slide-slider-main__body img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .swiper-button-prev,
